src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'while'", "'void'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'array'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'::'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "'.'", "'='", "','", "':'", "';'" ]

    symbolicNames = [ "<INVALID>", "INTEGER_LIT", "FLOAT_LIT", "BOOLEAN_LIT", 
                      "STRING_LIT", "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", 
                      "FALSE", "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", 
                      "RETURN", "STRING", "TRUE", "WHILE", "VOID", "OUT", 
                      "CONTINUE", "OF", "INHERIT", "ARRAY", "ADD", "MINUS", 
                      "STAR", "DIV", "MOD", "NOT", "AND_AND", "OR_OR", "EQUAL", 
                      "NOT_EQUAL", "LESS", "LESS_EQUAL", "GREATER", "GREATER_EQUAL", 
                      "DOUBLE_COLON", "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACK", 
                      "CLOSE_BRACK", "OPEN_BRACE", "CLOSE_BRACE", "DOT", 
                      "ASSIGN", "COMMA", "COLON", "SEMI_COLON", "IDENTIFIER", 
                      "COMMENT_LINE", "COMMENT_BLOCK", "WS", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_variable_declaration = 2
    RULE_short_variable_declaration = 3
    RULE_long_variable_declaration = 4
    RULE_parameter_declaration_list = 5
    RULE_parameter_declaration_list_tail = 6
    RULE_parameter_declaration = 7
    RULE_identifier_list = 8
    RULE_identifier_list_tail = 9
    RULE_type_specifier = 10
    RULE_array_type_specifier = 11
    RULE_dimension_list = 12
    RULE_dimension_list_tail = 13
    RULE_function_declaration = 14
    RULE_function_body = 15
    RULE_statement = 16
    RULE_assignment_statement = 17
    RULE_if_statement = 18
    RULE_for_statement = 19
    RULE_while_statement = 20
    RULE_do_while_statement = 21
    RULE_break_statement = 22
    RULE_continue_statement = 23
    RULE_return_statement = 24
    RULE_call_statement = 25
    RULE_block_statement = 26
    RULE_expr_list = 27
    RULE_expr_list_tail = 28
    RULE_expr = 29
    RULE_string_expr = 30
    RULE_relational_expr = 31
    RULE_logical_expr = 32
    RULE_adding_expr = 33
    RULE_multiplying_expr = 34
    RULE_negate_expr = 35
    RULE_sign_expr = 36
    RULE_indexing_expr = 37
    RULE_indexing_expr_fall_through = 38
    RULE_braced_expr = 39
    RULE_operand = 40
    RULE_literal = 41
    RULE_indexed_array_lit = 42
    RULE_function_call = 43

    ruleNames =  [ "program", "declaration", "variable_declaration", "short_variable_declaration", 
                   "long_variable_declaration", "parameter_declaration_list", 
                   "parameter_declaration_list_tail", "parameter_declaration", 
                   "identifier_list", "identifier_list_tail", "type_specifier", 
                   "array_type_specifier", "dimension_list", "dimension_list_tail", 
                   "function_declaration", "function_body", "statement", 
                   "assignment_statement", "if_statement", "for_statement", 
                   "while_statement", "do_while_statement", "break_statement", 
                   "continue_statement", "return_statement", "call_statement", 
                   "block_statement", "expr_list", "expr_list_tail", "expr", 
                   "string_expr", "relational_expr", "logical_expr", "adding_expr", 
                   "multiplying_expr", "negate_expr", "sign_expr", "indexing_expr", 
                   "indexing_expr_fall_through", "braced_expr", "operand", 
                   "literal", "indexed_array_lit", "function_call" ]

    EOF = Token.EOF
    INTEGER_LIT=1
    FLOAT_LIT=2
    BOOLEAN_LIT=3
    STRING_LIT=4
    AUTO=5
    BREAK=6
    BOOLEAN=7
    DO=8
    ELSE=9
    FALSE=10
    FLOAT=11
    FOR=12
    FUNCTION=13
    IF=14
    INTEGER=15
    RETURN=16
    STRING=17
    TRUE=18
    WHILE=19
    VOID=20
    OUT=21
    CONTINUE=22
    OF=23
    INHERIT=24
    ARRAY=25
    ADD=26
    MINUS=27
    STAR=28
    DIV=29
    MOD=30
    NOT=31
    AND_AND=32
    OR_OR=33
    EQUAL=34
    NOT_EQUAL=35
    LESS=36
    LESS_EQUAL=37
    GREATER=38
    GREATER_EQUAL=39
    DOUBLE_COLON=40
    OPEN_PAREN=41
    CLOSE_PAREN=42
    OPEN_BRACK=43
    CLOSE_BRACK=44
    OPEN_BRACE=45
    CLOSE_BRACE=46
    DOT=47
    ASSIGN=48
    COMMA=49
    COLON=50
    SEMI_COLON=51
    IDENTIFIER=52
    COMMENT_LINE=53
    COMMENT_BLOCK=54
    WS=55
    ERROR_CHAR=56
    UNCLOSE_STRING=57
    ILLEGAL_ESCAPE=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DeclarationContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 88
                self.declaration()
                self.state = 91 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.IDENTIFIER):
                    break

            self.state = 93
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_declaration(self):
            return self.getTypedRuleContext(MT22Parser.Variable_declarationContext,0)


        def function_declaration(self):
            return self.getTypedRuleContext(MT22Parser.Function_declarationContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MT22Parser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.variable_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.function_declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def short_variable_declaration(self):
            return self.getTypedRuleContext(MT22Parser.Short_variable_declarationContext,0)


        def SEMI_COLON(self):
            return self.getToken(MT22Parser.SEMI_COLON, 0)

        def long_variable_declaration(self):
            return self.getTypedRuleContext(MT22Parser.Long_variable_declarationContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_variable_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_declaration" ):
                return visitor.visitVariable_declaration(self)
            else:
                return visitor.visitChildren(self)




    def variable_declaration(self):

        localctx = MT22Parser.Variable_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variable_declaration)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.short_variable_declaration()
                self.state = 100
                self.match(MT22Parser.SEMI_COLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.long_variable_declaration()
                self.state = 103
                self.match(MT22Parser.SEMI_COLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Short_variable_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier_list(self):
            return self.getTypedRuleContext(MT22Parser.Identifier_listContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def type_specifier(self):
            return self.getTypedRuleContext(MT22Parser.Type_specifierContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_short_variable_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShort_variable_declaration" ):
                return visitor.visitShort_variable_declaration(self)
            else:
                return visitor.visitChildren(self)




    def short_variable_declaration(self):

        localctx = MT22Parser.Short_variable_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_short_variable_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.identifier_list()
            self.state = 108
            self.match(MT22Parser.COLON)
            self.state = 109
            self.type_specifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Long_variable_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def type_specifier(self):
            return self.getTypedRuleContext(MT22Parser.Type_specifierContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def long_variable_declaration(self):
            return self.getTypedRuleContext(MT22Parser.Long_variable_declarationContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_long_variable_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLong_variable_declaration" ):
                return visitor.visitLong_variable_declaration(self)
            else:
                return visitor.visitChildren(self)




    def long_variable_declaration(self):

        localctx = MT22Parser.Long_variable_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_long_variable_declaration)
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(MT22Parser.IDENTIFIER)
                self.state = 112
                self.match(MT22Parser.COLON)
                self.state = 113
                self.type_specifier()
                self.state = 114
                self.match(MT22Parser.ASSIGN)
                self.state = 115
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(MT22Parser.IDENTIFIER)
                self.state = 118
                self.match(MT22Parser.COMMA)
                self.state = 119
                self.long_variable_declaration()
                self.state = 120
                self.match(MT22Parser.COMMA)
                self.state = 121
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_declaration_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter_declaration(self):
            return self.getTypedRuleContext(MT22Parser.Parameter_declarationContext,0)


        def parameter_declaration_list_tail(self):
            return self.getTypedRuleContext(MT22Parser.Parameter_declaration_list_tailContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_parameter_declaration_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_declaration_list" ):
                return visitor.visitParameter_declaration_list(self)
            else:
                return visitor.visitChildren(self)




    def parameter_declaration_list(self):

        localctx = MT22Parser.Parameter_declaration_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameter_declaration_list)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.parameter_declaration()
                self.state = 126
                self.parameter_declaration_list_tail()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.parameter_declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_declaration_list_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def parameter_declaration(self):
            return self.getTypedRuleContext(MT22Parser.Parameter_declarationContext,0)


        def parameter_declaration_list_tail(self):
            return self.getTypedRuleContext(MT22Parser.Parameter_declaration_list_tailContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_parameter_declaration_list_tail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_declaration_list_tail" ):
                return visitor.visitParameter_declaration_list_tail(self)
            else:
                return visitor.visitChildren(self)




    def parameter_declaration_list_tail(self):

        localctx = MT22Parser.Parameter_declaration_list_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parameter_declaration_list_tail)
        try:
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.match(MT22Parser.COMMA)
                self.state = 132
                self.parameter_declaration()
                self.state = 133
                self.parameter_declaration_list_tail()
                pass
            elif token in [MT22Parser.CLOSE_PAREN]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def type_specifier(self):
            return self.getTypedRuleContext(MT22Parser.Type_specifierContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_parameter_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_declaration" ):
                return visitor.visitParameter_declaration(self)
            else:
                return visitor.visitChildren(self)




    def parameter_declaration(self):

        localctx = MT22Parser.Parameter_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameter_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INHERIT]:
                self.state = 138
                self.match(MT22Parser.INHERIT)
                pass
            elif token in [MT22Parser.OUT, MT22Parser.IDENTIFIER]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT]:
                self.state = 142
                self.match(MT22Parser.OUT)
                pass
            elif token in [MT22Parser.IDENTIFIER]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 146
            self.match(MT22Parser.IDENTIFIER)
            self.state = 147
            self.match(MT22Parser.COLON)
            self.state = 148
            self.type_specifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Identifier_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def identifier_list_tail(self):
            return self.getTypedRuleContext(MT22Parser.Identifier_list_tailContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_identifier_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier_list" ):
                return visitor.visitIdentifier_list(self)
            else:
                return visitor.visitChildren(self)




    def identifier_list(self):

        localctx = MT22Parser.Identifier_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_identifier_list)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.match(MT22Parser.IDENTIFIER)
                self.state = 151
                self.identifier_list_tail()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.match(MT22Parser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Identifier_list_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def identifier_list_tail(self):
            return self.getTypedRuleContext(MT22Parser.Identifier_list_tailContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_identifier_list_tail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier_list_tail" ):
                return visitor.visitIdentifier_list_tail(self)
            else:
                return visitor.visitChildren(self)




    def identifier_list_tail(self):

        localctx = MT22Parser.Identifier_list_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_identifier_list_tail)
        try:
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.match(MT22Parser.COMMA)
                self.state = 156
                self.match(MT22Parser.IDENTIFIER)
                self.state = 157
                self.identifier_list_tail()
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_specifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_type_specifier(self):
            return self.getTypedRuleContext(MT22Parser.Array_type_specifierContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_type_specifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_specifier" ):
                return visitor.visitType_specifier(self)
            else:
                return visitor.visitChildren(self)




    def type_specifier(self):

        localctx = MT22Parser.Type_specifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_type_specifier)
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.array_type_specifier()
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.match(MT22Parser.AUTO)
                pass
            elif token in [MT22Parser.INTEGER]:
                self.enterOuterAlt(localctx, 3)
                self.state = 163
                self.match(MT22Parser.INTEGER)
                pass
            elif token in [MT22Parser.FLOAT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 164
                self.match(MT22Parser.FLOAT)
                pass
            elif token in [MT22Parser.BOOLEAN]:
                self.enterOuterAlt(localctx, 5)
                self.state = 165
                self.match(MT22Parser.BOOLEAN)
                pass
            elif token in [MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 6)
                self.state = 166
                self.match(MT22Parser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_type_specifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def OPEN_BRACK(self):
            return self.getToken(MT22Parser.OPEN_BRACK, 0)

        def dimension_list(self):
            return self.getTypedRuleContext(MT22Parser.Dimension_listContext,0)


        def CLOSE_BRACK(self):
            return self.getToken(MT22Parser.CLOSE_BRACK, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)
